[tool.poetry]
name = "pypolestar"
version = "1.1.0"
description = "Library to control Polestar"
authors = ["Tuen Lee <leeyuentuen@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/leeyuentuen/pypolestar"
packages = [
    { include = "pypolestar", from = "src" },
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/leeyuentuen/pypolestar/issues"
"Changelog" = "https://github.com/leeyuentuen/pypolestar/blob/master/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.8"
asyncio = "^3.4.3"
aiohttp = "^3.7.4.post0"

[tool.semantic_release]
branch = "main"
version_tool = "pyproject.toml:tool.poetry.version"
version_variable = "src/pypolestar/__init__.py:__version__"
build_command = "pip install poetry && poetry build"

[tools.isort]
profile = "black"
known_first_party = ["pypolestar"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

